--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class='panel panel-primary'>
+<html>
+      
+  <body>
+<div id="wrapper" class='panel panel-primary'>
   <div class='panel-heading'>
+      <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">&#9776;</a>
       Welcome to {{title}}!
       <input class='searchBar' type = 'text'>
       <button class='btn btn-primary'>Films</button> <!-- (click) = 'toggleImage()' -->
       <button class='btn btn-primary'>List</button>
       <button class='btn btn-primary'>Reviewers</button>
   </div>
-  <div class='panel-body'>
 
-    </div>
-  </div>
-
-<div style="text-align:center">
 </div>
+</body>
+</html>
 
