--- a/src/app/login-component/login-component.component.html
+++ b/src/app/login-component/login-component.component.html
@@ -2,12 +2,12 @@
   <h2>Login</h2>
   <form>
     <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" name="username">
+      <label for="username">Email</label>
+      <input type="text" name="email" [(ngModel)]="email">
     </div>
     <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" name="password">
+        <input type="password" name="password" [(ngModel)]="password">
       </div>  
     <div class="form-group">
         <button class="btn btn-primary">Login</button>
