--- a/src/app/register-component/register-component.component.html
+++ b/src/app/register-component/register-component.component.html
@@ -1,13 +1,13 @@
 <div class="container">
-    <h2>Login</h2>
+    <h2>Register</h2>
     <form>
       <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" name="username">
+        <label for="username">Email</label>
+        <input type="text" name="email" [(ngModel)]="email">
       </div>
       <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" name="password">
+          <input type="password" name="password" [(ngModel)]="password">
         </div>  
       <div class="form-group">
           <button class="btn btn-primary">Login</button>
@@ -15,4 +15,3 @@
         </div>  
       </form>
   </div>
-  
