--- a/src/app/register-component/register-component.component.html
+++ b/src/app/register-component/register-component.component.html
@@ -1,17 +1,20 @@
 <div class="container">
-    <h2>Register</h2>
-    <form>
-      <div class="form-group">
-        <label for="username">Email</label>
-        <input type="text" name="email" [(ngModel)]="email">
-      </div>
-      <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" name="password" [(ngModel)]="password">
-        </div>  
-      <div class="form-group">
-          <button class="btn btn-primary">Login</button>
-          <a class="btn btn-link">Register</a>
-        </div>  
-      </form>
-  </div>
+  <h2>Register</h2>
+  <form>
+    <div class="form-group">
+      <label for="username">Email</label>
+      <input type="text" name="email" [(ngModel)]="email">
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" name="password" [(ngModel)]="password">
+    </div>
+    <div class="form-group">
+      <label for="confirmPassword">Password</label>
+      <input type="password" name="confirmPassword" [(ngModel)]="password">
+    </div>
+    <div class="form-group">
+      <button class="btn btn-link" [disabled]="!email || !password">Register</button>
+    </div>
+  </form>
+</div>
