Login and registration works

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,9 @@
       <button class='btn btn-primary'>List</button>
       <button class='btn btn-primary'>Reviewers</button>
   </div>
-
 </div>
+  <router-outlet></router-outlet>
+  <app-login-component></app-login-component>
 </body>
 </html>
 
