--- a/src/app/login-component/login-component.component.html
+++ b/src/app/login-component/login-component.component.html
@@ -10,8 +10,8 @@
         <input type="password" name="password" [(ngModel)]="password">
       </div>  
     <div class="form-group">
-        <button class="btn btn-primary" (click)="login()" [disabled]="!email || !password">Login</button>
-        <a class="btn btn-link" (click)="signup()">Register</a>
+        <button class="btn btn-primary" (click)="login()">Login</button>
+        <a class="btn btn-link" [routerLink]="['/register']">Register</a>
       </div>  
     </form>
 </div>
