--- a/src/app/register-component/register-component.component.html
+++ b/src/app/register-component/register-component.component.html
@@ -7,14 +7,14 @@
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" name="password" [(ngModel)]="password">
+      <input type="password" name="password">
     </div>
     <div class="form-group">
       <label for="confirmPassword">Password</label>
       <input type="password" name="confirmPassword" [(ngModel)]="password">
     </div>
     <div class="form-group">
-      <button class="btn btn-link" [disabled]="!email || !password">Register</button>
+      <button class="btn btn-link" (click)='signup()'>Register</button>
     </div>
   </form>
 </div>
