changed list component + login+register

--- a/src/app/list-component/list-component.component.html
+++ b/src/app/list-component/list-component.component.html
@@ -1,3 +1,8 @@
-<p>
-  list-component works!
-</p>
+<div class="container">
+  <h1>Lists</h1>
+  <div class="row">
+    <div class="col-sm-6">
+      <p>Lorem ipsum...</p>
+    </div>
+  </div>
+</div>
