--- a/src/app/login-component/login-component.component.html
+++ b/src/app/login-component/login-component.component.html
@@ -2,12 +2,12 @@
   <h2>Login</h2>
   <form>
     <div class="form-group">
-      <label for="username">Email</label>
-      <input type="text" name="email" [(ngModel)]="email">
+      <label for="email" class="col-form-label">Email</label>
+      <input type="text" name="email" [(ngModel)]="email" class="form-control">
     </div>
     <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" name="password" [(ngModel)]="password">
+        <label for="password" class="col-form-label">Password</label>
+        <input type="password" name="password" [(ngModel)]="password" class="form-control">
       </div>  
     <div class="form-group">
         <button class="btn btn-primary" (click)="login()">Login</button>
