--- a/src/app/films-component/films-component.component.html
+++ b/src/app/films-component/films-component.component.html
@@ -1,3 +1,17 @@
-<p>
-  films-component works!
-</p>
+<div id="Films">
+
+</div>
+
+  
+  
+  
+  
+  <!-- 
+    
+    [(ngModel)]=MovieName
+    
+    echo '{}' |  \
+  http GET 'https://api.themoviedb.org/3/movie/2/images?language=en-US&api_key=b1486a6362ec4507649074230d7aa50b'
+
+http://files.tmdb.org/p/exports/movie_ids_04_28_2017.json.gz
+    https://api.themoviedb.org/3/movie/550?api_key=b1486a6362ec4507649074230d7aa50b&callback=test     This is working, key is correct  -->
