--- a/src/app/films-component/films-component.component.css
+++ b/src/app/films-component/films-component.component.css
@@ -1,5 +1,10 @@
-#Films{
-    height: 80%;
-    width: 100%
+#container{
+    height: 100%;
+    width: 100%;
+}
+
+.col-sm-1{
+    margin-left: 20px;
+    margin-bottom: 20px;
 }
 
