--- a/src/app/films-component/films-component.component.html
+++ b/src/app/films-component/films-component.component.html
@@ -1,5 +1,29 @@
-<div id="Films">
+<div id="container">
 
+  Popular Films
+  
+  <div class="row">
+    <div class="col-sm-1" style="background-color:blue;" >row</div>
+    <div class="col-sm-1" style="background-color:green;" >row</div>
+    <div class="col-sm-1" style="background-color:yellow;">row</div>
+    <div class="col-sm-1" style="background-color:pink;">your</div>
+    <div class="col-sm-1" style="background-color:orange;">boat</div>
+    </div>
+  
+
+  <div class="row">
+    <div class="col-sm-1" style="background-color:blue;" >row</div>
+    <div class="col-sm-1" style="background-color:green;" >row</div>
+    <div class="col-sm-1" style="background-color:yellow;" >row</div>
+    <div class="col-sm-1" style="background-color:pink;">your</div>
+    <div class="col-sm-1" style="background-color:orange;">boat</div>
+  </div>
+
+  <div class="row">
+    ...
+  </div>
+
+<!-- End of containter -->
 </div>
 
   
