--- a/src/app/list-component/list-component.component.html
+++ b/src/app/list-component/list-component.component.html
@@ -1,3 +1,7 @@
-<p>
-  list-component works!
-</p>
+
+<div class='List'>
+  <div id='Poster' class="col-sm-1" style="background-color:blue;" >row</div>
+  <div id='FilmName'>Film Name</div>
+  <p id='description'>Description</p>
+  <div id='user'>User name</div>
+</div>
