--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,8 @@
+
+<!-- TODO: Show profile data, this is the editprofile -->
 <div id = 'wrapper'>
 
-<h1>Edit Profile</h1>
+<h1>Profile</h1>
 
 <div id='Pic' class='ProfileInfo'>
   <p>Upload Profile Pic! </p>
