IMDB API & Json
Using IMDB api now, easy and more stable to use, also poster comes with request. Bringing in single Json movie

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,6 @@
   
     <div id="Sidebar">
       <div>
-          <img id='ProfilePic' src="../images/ProfilePic.png">
       </div>
   
     <ul class="SidebarList">
@@ -30,21 +29,9 @@
     </div>
   
     <div id="MainBody">
-        <!-- <app-films-component></app-films-component>
-        <app-list-component></app-list-component> -->
-        <app-profile></app-profile>
+         <app-films-component></app-films-component>
+        <!-- <app-list-component></app-list-component> 
+        <app-profile></app-profile> -->
     </div>
   
-  </div>
-
-
-
-
-
-
-<div class="footer navbar navbar-default navbar-fixed-bottom">
-    <div class="container">
-      <p class="navbar-text pull-left text-muted">© 2017 - The Cookbook
-      </p>
-    </div>
   </div>
