--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -76,3 +76,10 @@
   #ProfilePic{
     margin-left: 20px;
   }
+
+  .footer{
+    position:fixed;
+    background-color: silver;
+    bottom:0;
+    left:0;
+   }
