--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,56 +1,53 @@
 <div id="wrapper" class='panel panel-primary'>
-    <div class='panel-heading'>
+  <div class='panel-heading'>
 
-        <a class="btn btn-secondary"  id="menuToggle">&#9776;</a>
+    <a class="btn btn-secondary" id="menuToggle">&#9776;</a>
 
-        Welcome to {{title}}!
-  
-        <button id= "searchBarButton"  >Search</button>
-        <input class= "searchBar" type="text" #MovieTitle>
-        
-  
-        <button class='btn btn-primary'>Films</button> <!-- (click) = 'toggleImage()' -->
-        <button class='btn btn-primary'>List</button>
-        <button class='btn btn-primary'>Reviewers</button>
+    Welcome to {{title}}!
+
+    <button id="searchBarButton">Search</button>
+    <input class="searchBar" type="text" #MovieTitle>
+
+
+    <button class='btn btn-primary'>Films</button>
+    <!-- (click) = 'toggleImage()' -->
+    <button class='btn btn-primary'>List</button>
+    <button class='btn btn-primary'>Reviewers</button>
+  </div>
+
+  <div id="Sidebar">
+    <div>
     </div>
-  
-    <div id="Sidebar">
-      <div>
-      </div>
-  
+
     <ul class="SidebarList">
-  
-      <li> <a class="button js-button">Popular Films</a> </li>
-      <li> <a class="button js-button">Profile</a> </li>
-      <li> <a class="button js-button">Sign in</a> </li>
+
+      <li>
+        <a class="button js-button">Popular Films</a>
+      </li>
+      <li>
+        <a class="button js-button">Profile</a>
+      </li>
+      <li>
+        <a class="button js-button">Sign in</a>
+      </li>
       <!-- Need to create an anchor for the create account -->
     </ul>
-  
-    </div>
-  
-    <div id="MainBody">
-         <app-films-component></app-films-component>
-        <!-- <app-list-component></app-list-component> 
+
+  </div>
+
+  <div id="MainBody">
+    <app-films-component></app-films-component>
+    <!-- <app-list-component></app-list-component> 
         <app-profile></app-profile> -->
-    </div>
-  
-<<<<<<< HEAD
-=======
   </div>
 
 </div>
-  <router-outlet></router-outlet>
-</body>
-</html>
 
-
-
-
+<router-outlet></router-outlet>
 
 <div class="footer navbar navbar-default navbar-fixed-bottom">
-    <div class="container">
-      <p class="navbar-text pull-left text-muted">© 2017 - The Cookbook
-      </p>
-    </div>
->>>>>>> c5286c51965c0702e14fd78dc0630b64576c6f08
+  <div class="container">
+    <p class="navbar-text pull-left text-muted">© 2017 - The Cookbook
+    </p>
   </div>
+</div>
