--- a/src/app/films-component/films-component.component.css
+++ b/src/app/films-component/films-component.component.css
@@ -1,10 +1,25 @@
+.PosterDiv {
+    color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    font-size: 150%;
+  }
+
 #container{
-    height: 100%;
-    width: 100%;
+    display: grid;
+    grid-template-columns: 100px 100px 100px 100px 100px;
+    grid-gap: 120px ;
+    background-color: #fff;
+    color: #444;
 }
 
 .col-sm-1{
     margin-left: 20px;
     margin-bottom: 20px;
+}
+
+.Poster{
+    height: 300px;
+    width: 200px;
 }
 
