Added user class, working on login component and edit-profile

--- a/src/app/editprofile/editprofile.component.html
+++ b/src/app/editprofile/editprofile.component.html
@@ -1,6 +1,5 @@
-<div id = 'wrapper'>
-  
-  <h1>Profile</h1>
+<div id='container'>
+  <h2>Profile</h2>
   
   <div id='Pic' class='ProfileInfo'>
     <p>Upload Profile Pic! </p>
