--- a/src/app/films-component/films-component.component.html
+++ b/src/app/films-component/films-component.component.html
@@ -3,7 +3,7 @@
 
     <div class = "PosterDiv" *ngFor="let show of shows">
       <!-- put in a href -->
-      <img class='Poster' [src]= "getUrl(show.poster_path)">
+      <img class='Poster' id="{{show.original_title}}" [src]= "getUrl(show.poster_path)">
     </div>
 
 <!-- End of containter -->
